--- a/package.json
+++ b/package.json
@@ -6,21 +6,61 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "compile": "hardhat compile",
+    "deploy": "hardhat run scripts/deploy.js --network alfajores",
+    "verify": "hardhat run scripts/verify.js --network alfajores",
+    "deploy:local": "hardhat run scripts/deploy.js --network localhost",
+    "test-deploy": "hardhat run scripts/test-deploy.js"
   },
   "dependencies": {
+    "@composer-kit/ui": "^0.0.2",
+    "@rainbow-me/rainbowkit": "^2.2.8",
+    "@tanstack/react-query": "^5.83.0",
+    "clsx": "^2.1.1",
+    "firebase": "^12.0.0",
+    "jose": "^6.0.12",
+    "lucide-react": "^0.525.0",
+    "minimatch": "^10.0.3",
+    "next": "14.2.30",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.30"
+    "react-is": "^19.1.0",
+    "recharts": "^3.1.0",
+    "tailwind-merge": "^3.3.1",
+    "viem": "^2.32.0",
+    "wagmi": "^2.15.7",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@nomicfoundation/hardhat-chai-matchers": "^2.1.0",
+    "@nomicfoundation/hardhat-ethers": "^3.1.0",
+    "@nomicfoundation/hardhat-ignition": "^0.15.13",
+    "@nomicfoundation/hardhat-ignition-ethers": "^0.15.14",
+    "@nomicfoundation/hardhat-network-helpers": "^1.1.0",
+    "@nomicfoundation/hardhat-toolbox": "^6.1.0",
+    "@nomicfoundation/hardhat-verify": "^2.1.0",
+    "@nomicfoundation/ignition-core": "^0.15.13",
+    "@openzeppelin/contracts": "^5.4.0",
+    "@typechain/ethers-v6": "^0.5.0",
+    "@typechain/hardhat": "^9.0.0",
+    "@types/chai": "^4.2.0",
+    "@types/mocha": ">=9.1.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "chai": "^4.2.0",
+    "dotenv": "^17.2.0",
     "eslint": "^8",
-    "eslint-config-next": "14.2.30"
+    "eslint-config-next": "14.2.30",
+    "ethers": "^6.14.0",
+    "hardhat": "^2.26.0",
+    "hardhat-gas-reporter": "^2.3.0",
+    "postcss": "^8",
+    "solidity-coverage": "^0.8.1",
+    "tailwindcss": "^3.4.1",
+    "ts-node": ">=8.0.0",
+    "typechain": "^8.3.0",
+    "typescript": "^5"
   }
 }
