--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
   },
   "dependencies": {
     "@composer-kit/ui": "^0.0.2",
+    "@divvi/referral-sdk": "^2.2.0",
+    "@farcaster/auth-client": "^0.7.0",
+    "@farcaster/miniapp-sdk": "^0.1.7",
+    "@farcaster/miniapp-wagmi-connector": "^1.0.0",
     "@rainbow-me/rainbowkit": "^2.2.8",
     "@tanstack/react-query": "^5.83.0",
     "clsx": "^2.1.1",
