--- a/package.json
+++ b/package.json
@@ -19,21 +19,36 @@
     "@farcaster/auth-client": "^0.7.0",
     "@farcaster/miniapp-sdk": "^0.1.7",
     "@farcaster/miniapp-wagmi-connector": "^1.0.0",
+    "@hookform/resolvers": "^5.2.1",
+    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-progress": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.6",
+    "@radix-ui/react-toast": "^1.2.15",
     "@rainbow-me/rainbowkit": "^2.2.8",
-    "@tanstack/react-query": "^5.83.0",
+    "@tanstack/react-query": "^5.85.2",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "firebase": "^12.0.0",
+    "framer-motion": "^12.23.12",
     "jose": "^6.0.12",
     "lucide-react": "^0.525.0",
     "minimatch": "^10.0.3",
     "next": "14.2.30",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.62.0",
     "react-is": "^19.1.0",
+    "react-swipeable": "^7.0.2",
     "recharts": "^3.1.0",
     "tailwind-merge": "^3.3.1",
-    "viem": "^2.32.0",
-    "wagmi": "^2.15.7",
+    "tailwindcss-animate": "^1.0.7",
+    "viem": "^2.33.3",
+    "wagmi": "^2.16.3",
+    "zod": "^3.25.76",
     "zustand": "^5.0.6"
   },
   "devDependencies": {
