--- a/package.json
+++ b/package.json
@@ -11,7 +11,14 @@
     "deploy": "hardhat run scripts/deploy.js --network alfajores",
     "verify": "hardhat run scripts/verify.js --network alfajores",
     "deploy:local": "hardhat run scripts/deploy.js --network localhost",
-    "test-deploy": "hardhat run scripts/test-deploy.js"
+    "test-deploy": "hardhat run scripts/test-deploy.js",
+    "register-businesses": "hardhat run scripts/register-businesses.js --network alfajores",
+    "setup": "./scripts/setup-env.sh",
+    "deploy:full": "./scripts/deploy.sh",
+    "type-check": "tsc --noEmit",
+    "analyze": "ANALYZE=true npm run build",
+    "clean": "rm -rf .next out dist",
+    "db:seed": "node scripts/seed-database.js"
   },
   "dependencies": {
     "@composer-kit/ui": "^0.0.2",
@@ -33,6 +40,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "firebase": "^12.0.0",
+    "firebase-admin": "^13.4.0",
     "framer-motion": "^12.23.12",
     "jose": "^6.0.12",
     "lucide-react": "^0.525.0",
@@ -75,6 +83,7 @@
     "ethers": "^6.14.0",
     "hardhat": "^2.26.0",
     "hardhat-gas-reporter": "^2.3.0",
+    "pino-pretty": "^13.1.1",
     "postcss": "^8",
     "solidity-coverage": "^0.8.1",
     "tailwindcss": "^3.4.1",
